--- a/pviewer5/QuickFilterDialog.xaml
+++ b/pviewer5/QuickFilterDialog.xaml
@@ -14,48 +14,65 @@
             <Setter Property="FontSize" Value="9pt"/>
             <Setter Property="HorizontalAlignment" Value="Center"/>
         </Style>
-        <local:MACToMachineNameConverter x:Key="dmconverter"/>
+        <local:MACConverter x:Key="macconverter"/>
     </Window.Resources>
     <Grid Name="QFDgrid"
           Margin="20,29,20,11.333"
           ShowGridLines="True">
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
-            <ColumnDefinition/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
-        <GroupBox Header="MACs to Exclude"
-                  Name="inclipbox"
-                  Grid.Column="0"  
+        <GroupBox Header="Criteria - MAC"
+                  Grid.Column="0"
                   Grid.Row="0"
                   Margin="5,5,5,5">
             <!-- added Enable*Virtualization lines based on http://www.elegant-software.net/2014/05/performance-of-the-wpf-datagrid.html -->
             <!-- added VirtualizingPanel lines based on http://www.codewrecks.com/blog/index.php/2012/07/06/wpf-datagrid-poor-performance-on-sorting/ -->
+            <!-- added CanUserAddrRows="False" to prevent display of blank row at end-->
             <DataGrid
-                Name="ExclMACDG"
+                Name="QFMACDG"
                 EnableColumnVirtualization="True"
                 EnableRowVirtualization="True"
                 VirtualizingPanel.IsVirtualizing="True"
                 VirtualizingPanel.VirtualizationMode="Recycling"
                 AutoGenerateColumns="False"
-                ItemsSource="{Binding Path=exclmac}"
-                ItemStringFormat="x">
+                ItemsSource="{Binding Path=qfproperty}"
+                ItemStringFormat="x"
+                CanUserAddRows="False">
                 <DataGrid.Columns>
-                    <DataGridTextColumn Header="Mask" Binding="{Binding Path=mask}"/>
-                    <DataGridTextColumn Header="MAC" Binding="{Binding Path=value}"/>
+                    <DataGridComboBoxColumn Header="Incl/Excl" ItemsSource="{Binding Source={x:Static local:QFItem.QFInclItems}}" SelectedItemBinding="{Binding Path=inclusion}"/>
+                    <DataGridTextColumn Header="Mask" >
+                        <DataGridTextColumn.Binding>
+                            <Binding Path="mask" Converter="{StaticResource macconverter}" >
+                                <Binding.ValidationRules>
+                                    <local:ValidateMACInput/>
+                                </Binding.ValidationRules>
+                            </Binding>
+                        </DataGridTextColumn.Binding>
+                    </DataGridTextColumn>
+                    <DataGridTextColumn Header="MAC Address" >
+                        <DataGridTextColumn.Binding>
+                            <Binding Path="value" Converter="{StaticResource macconverter}" >
+                                <Binding.ValidationRules>
+                                    <local:ValidateMACInput/>
+                                </Binding.ValidationRules>
+                            </Binding>
+                        </DataGridTextColumn.Binding>
+                    </DataGridTextColumn>
                     <DataGridCheckBoxColumn Header="Active" Binding="{Binding Path=active}"/>
+                    <DataGridTextColumn Header="# Matched" IsReadOnly="True" Binding="{Binding Path=nummatched}"/>
                 </DataGrid.Columns>
-                <DataGrid.ContextMenu>
+               <DataGrid.ContextMenu>
                     <ContextMenu>
-                        <MenuItem Name="menuitemqfdaddrow" Header="Add Row" Command="{x:Static local:QuickFilterDialog.qfdaddrow}"/>
-                        <MenuItem Name="menuitemqfddelrow" Header="Delete Row"/>
+                        <MenuItem Name="qfmacaddrowmenuitem" Header="Add Row" Command="{x:Static local:QuickFilterDialog.qfaddrow}"/>
+                        <MenuItem Name="qfmacdelrowmenuitem" Header="Delete Row"/>
                     </ContextMenu>
                 </DataGrid.ContextMenu>
-            </DataGrid>
+             </DataGrid>
         </GroupBox>
         <WrapPanel Name="buttonbar"
                    Grid.ColumnSpan="2"
